[package]
name = "rust-ascii-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25"
imageproc = "0.25"
rusttype = "0.9"
colored = "2.1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
rayon = "1.10"
ab_glyph = "0.2.32"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
